SERVER-20204: Use mongoMalloc to allocate memory